--- a/src/components/boxMenu/BoxMenu.scss
+++ b/src/components/boxMenu/BoxMenu.scss
@@ -7,6 +7,7 @@
     height: 212px;
     top: 88px;
     padding: 0;
+    z-index: 999;
 
     :nth-child(2) {
         border-bottom: 1px solid rgba(47, 47, 47, .1);
