added middle section with progress bar

--- a/src/sections/header/Header.scss
+++ b/src/sections/header/Header.scss
@@ -6,7 +6,7 @@
     align-items: flex-start;
     background: linear-gradient(180deg, #2e2e2e 0%, rgba(0, 0, 0, 0.0001) 30%);
     mix-blend-mode: normal;
-    position: relative;
+    position: relative;6
 
     @media (max-width: 375px) {
         padding: 32px 24px;
