--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 157px;
     &.primary{
         background: #3CB3AB;
         &:hover{
