--- a/src/components/subBox/SubBox.scss
+++ b/src/components/subBox/SubBox.scss
@@ -8,11 +8,20 @@
   justify-content: center;
   flex-direction: column;
   gap: 24px;
+  @media (max-width: 375px) {
+    padding: 24px;
+  }
   .subcription-top-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    @media (max-width: 375px) {
+      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+    }
     .subcription-header {
       font-family: "Commissioner";
       font-style: normal;
@@ -44,12 +53,23 @@
     display: flex;
     align-items: center;
     color: #7a7a7a;
+    @media (max-width: 375px) {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
+    }
   }
   .subcription-bottom-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    @media (max-width: 375px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 24px;
+    }
     .subcrition-bottom-left {
       display: flex;
       align-items: center;
