added subcription box and main section with responsive desing

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -22,4 +22,9 @@
           width: 204px;  
         }
     }
+    &.disable{
+        background: #CBCBCB;
+        mix-blend-mode: normal;
+        opacity: 0.5;
+    }
 }
