--- a/src/sections/main/Main.scss
+++ b/src/sections/main/Main.scss
@@ -14,7 +14,7 @@
   @media (max-width: 375px) {
     padding: 24px;
     width: 327px;
-    height: 1655px;
+    height: 1700px;
     top: 988px;
   }
 
@@ -64,5 +64,12 @@
       font-size: 14px;
       line-height: 24px;
     }
+  }
+  .cards-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 24px;
   }
 }
