added modal logic

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -21,6 +21,10 @@
         &.large{
           width: 204px;  
         }
+        &.small{
+            width: 107px;
+            height: 48px;  
+        }
     }
     &.disable{
         background: #CBCBCB;
