--- a/src/components/subModalBox/subModalBox.scss
+++ b/src/components/subModalBox/subModalBox.scss
@@ -12,6 +12,14 @@
     width: 100%;
     height: 100%;
 
+    &.disable {
+        opacity: .6;
+    }
+
+    @media (max-width:375px) {
+        width: 279px;
+    }
+
 
     &.active {
         border: 2px solid #3CB3AB;
@@ -28,12 +36,67 @@
         display: flex;
         align-items: center;
         color: #7A7A7A;
-        // padding-left: 28px;
-        // padding-right: 28px;
-        &.active{
+
+        @media (max-width:375px) {
+            font-family: 'Commissioner';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 24px;
+            display: flex;
+            align-items: center;
+            color: #7A7A7A;
+            max-width: 231px;
+        }
+
+        &.active {
             margin-bottom: 32px;
 
         }
+    }
+
+    .top-sub-modal-container-right-mobile {
+        display: none;
+
+
+        @media (max-width:375px) {
+            display: inline;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+            padding-left: 24px;
+            gap: 8px;
+            margin-top: 24px;
+            padding-bottom: 24px;
+
+        }
+
+        .top-sub-modal-header-right-mobile {
+
+            font-family: 'Commissioner';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 22px;
+            display: flex;
+            align-items: center;
+            color: #000000;
+        }
+
+        .top-sub-modal-subtitle-right-mobile {
+            font-family: 'Commissioner';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 18px;
+            display: flex;
+            align-items: center;
+
+            color: #7A7A7A;
+
+        }
+
     }
 
 
@@ -48,11 +111,24 @@
         gap: 24px;
         margin-bottom: 17px;
 
+        @media (max-width:375px) {
+            padding-left: 24px;
+            padding-right: 24px;
+            justify-content: center;
+            width: 279px;
+            gap: 16px;
+        }
+
+
 
         .left-check-container {
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @media (max-width:375px) {}
+
+
 
             input[type="checkbox"] {
                 /* Add if not using autoprefixer */
@@ -74,6 +150,16 @@
 
                 display: grid;
                 place-content: center;
+                font-family: 'Commissioner';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 17px;
+                display: flex;
+                align-items: center;
+
+                color: #000000;
+
             }
 
             input[type="checkbox"]::before {
@@ -102,6 +188,14 @@
             gap: 17px;
             width: 100%;
 
+
+            @media (max-width:375px) {
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                gap: 8px;
+            }
+
             .top-sub-modal-header-left {
                 font-family: 'Commissioner';
                 font-style: normal;
@@ -111,6 +205,19 @@
                 display: flex;
                 align-items: center;
                 color: #000000;
+                cursor: pointer;
+
+                &:hover {
+                    font-family: 'Commissioner';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 20px;
+                    display: flex;
+                    align-items: center;
+                    color: #3CB3AB;
+
+                }
             }
 
             .top-sub-modal-subtitle-left {
@@ -131,6 +238,10 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
+
+            @media (max-width:375px) {
+                display: none;
+            }
 
             .top-sub-modal-header-right {
                 font-family: 'Commissioner';
@@ -160,7 +271,7 @@
     }
 
     .bottom-sub-modal-container {
-        padding-top: 24px ;
+        padding-top: 24px;
         padding-left: 28px;
         padding-right: 28px;
         width: 100%;
@@ -169,8 +280,13 @@
         justify-content: space-between;
         border-top: 1px solid rgba(0, 0, 0, .15);
 
-        .left-bottom-box-container{
-            .left-bottom-header{
+        @media (max-width:375px) {
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .left-bottom-box-container {
+            .left-bottom-header {
                 font-family: 'Commissioner';
                 font-style: normal;
                 font-weight: 400;
@@ -197,6 +313,7 @@
                 width: 100px;
                 height: 48px;
                 text-align: center;
+
                 .label-imput-bottom {
                     font-family: 'Commissioner';
                     font-style: normal;
